# books

./: Llama_2_Fine_Tuning_Quran.ipynb  README.md  quaran_authors.json
notebooks/: data scrab - quran.ipynb
quran/: aakgul.xlsx  abayindir.xlsx  abulac.xlsx  ahmettekin.xlsx  ahmetvarol.xlsx  alifikriyavuz.xlsx  aparliyan.xlsx  arapca.xlsx  bahaeddinsaglam.xlsx  baltacioglu.xlsx  bayraktar.xlsx  besimatalay.xlsx  bunyadov.xlsx  cemalkulunkoglu.xlsx  cemilsaid.xlsx  demiryent.xlsx  diyanetislerieski.xlsx  diyanetisleriyeni.xlsx  diyanetvakfi.xlsx  edip.xlsx  elmaliliorj.xlsx  elmalilisade.xlsx  erhanaktas.xlsx  eskianadoluturkcesi.xlsx  golpinarli.xlsx  hayrat.xlsx  hbasricantay.xlsx  ilyasyorulmaz.xlsx  islamoglu.xlsx  ismailhakkiizmirli.xlsx  ismailyakit.xlsx  kadricelik.xlsx  kuranyolu.xlsx  mahmutkisa.xlsx  mahmutozdemir.xlsx  mehmetcakir.xlsx  mehmetcoban.xlsx  mehmetokuyan.xlsx  mehmetturk.xlsx  muhammedesed.xlsx  (+14 more)
streamlit/: app.py  pyproject.toml
