[tool.poetry]
name = "quran-gpt"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
transformers = "^4.6.1"
sentence-transformers = "^2.2.2"
streamlit = "^1.14.0"
accelerate
bitsandbytes
peft


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
